--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,6 +41,14 @@ footer, header, hgroup, menu, nav, section {
   z-index: -1;
 }
 
+@media (max-width: 750px) {
+    #background-video { display: none; }
+    body {
+      background: url("https://assets.codepen.io/6093409/river.jpg") no-repeat;
+      background-size: cover;
+    }
+}
+
 body {
 	line-height: 1;
 }
