--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,10 +43,7 @@ footer, header, hgroup, menu, nav, section {
 
 @media (max-width: 750px) {
     #background-video { display: none; }
-    body {
-      background: url("https://assets.codepen.io/6093409/river.jpg") no-repeat;
-      background-size: cover;
-    }
+    body {}
 }
 
 body {
